--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -1,25 +1,8 @@
+@use "mixins";
 * {
   padding: 0;
   margin: 0;
   font-family: sans-serif;
-}
-
-@mixin flex-spaced {
-  display: flex;
-  justify-content: space-between;
-}
-
-@mixin content-box($area, $color) {
-  grid-area: $area;
-  background-color: $color;
-}
-
-@mixin button-page {
-  background: radial-gradient(circle, #4ae268 0%, #1ab450 100%);
-  height: 2rem;
-  width: 5rem;
-  border: none;
-  border-radius: 5px;
 }
 
 $primary-color: rgb(14, 234, 238);
@@ -27,7 +10,7 @@ $primary-color: rgb(14, 234, 238);
 body {
   top: 0;
   .nav-container {
-    @include flex-spaced();
+    @include mixins.flex-spaced();
     padding: 1.25rem;
     align-items: center;
     border-bottom: 1px solid black;
@@ -68,7 +51,7 @@ body {
     }
   }
   .main-heading {
-    @include flex-spaced();
+    @include mixins.flex-spaced();
     padding: 2rem;
   }
 
@@ -91,45 +74,45 @@ body {
     // }
   }
   .nav {
-    @include content-box(nav, #ab5bab);
+    @include mixins.content-box(nav, #ab5bab);
   }
 
   .upper-content-left {
-    @include content-box(upper-left, #a0a0a0);
+    @include mixins.content-box(upper-left, #a0a0a0);
   }
 
   .upper-content-center {
-    @include content-box(upper-center, #ff0000);
+    @include mixins.content-box(upper-center, #ff0000);
   }
 
   .upper-content-right {
-    @include content-box(upper-right, #d3d3d3);
+    @include mixins.content-box(upper-right, #d3d3d3);
   }
 
   .middle-content {
-    @include content-box(middle, #6a95ed);
+    @include mixins.content-box(middle, #6a95ed);
   }
 
   .lower-content-2 {
-    @include content-box(lower, #ff8c00);
+    @include mixins.content-box(lower, #ff8c00);
   }
 }
 
-.footer-container {
-  display: flex;
-  justify-content: center;
-  gap: 3rem;
-  background-color: #ccc;
-  padding-top: 55px;
-  padding-bottom: 50px;
-  .left-footer {
-    ul {
-      li {
-        text-decoration: none;
-      }
-    }
-  }
-}
+// .footer-container {
+//   display: flex;
+//   justify-content: center;
+//   gap: 3rem;
+//   background-color: #ccc;
+//   padding-top: 55px;
+//   padding-bottom: 50px;
+//   .left-footer {
+//     ul {
+//       li {
+//         text-decoration: none;
+//       }
+//     }
+//   }
+// }
 
 h1,
 h2,
@@ -144,11 +127,11 @@ span {
 }
 
 .below-heading {
-  @include flex-spaced();
+  @include mixins.flex-spaced();
   padding: 10px 20px 10px 20px;
 
   button {
-    @include button-page();
+    @include mixins.button-page();
   }
   .middle-div {
     display: flex;
@@ -164,5 +147,83 @@ span {
     button:hover {
       scale: 1.1;
     }
+  }
+}
+
+footer {
+  background-color: #f2f2f2;
+  padding: 40px 60px;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  color: #666;
+
+  .footer-container {
+    display: flex;
+    justify-content: center;
+    padding: 0;
+    flex-wrap: wrap;
+    gap: 160px;
+  }
+
+  .footer-about,
+  .footer-links,
+  .footer-social,
+  .footer-legal {
+    display: flex;
+    flex-direction: row;
+    flex: 1 1 200px;
+  }
+
+  .footer-about h3,
+  .footer-links h3 {
+    color: #00a8a8;
+    margin-bottom: 10px;
+  }
+
+  .footer-links a,
+  .footer-legal a {
+    @include mixins.footer-link;
+  }
+
+  .footer-social {
+    gap: 10px;
+    margin-bottom: 20px;
+
+    a {
+      width: 32px;
+      height: 32px;
+      background-color: white;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      // display: flex;
+      // justify-content: center;
+      // align-items: center;
+      color: #333;
+      transition: 0.3s;
+
+      &:hover {
+        background-color: #e6e6e6;
+      }
+    }
+  }
+
+  .footer-bottom {
+    text-align: center;
+    margin-top: 30px;
+    font-size: 12px;
+    color: #999;
+  }
+
+  .footer-right {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .footer-links {
+    display: flex;
+    flex-direction: column;
+  }
+  .footer-left {
+    max-width: 500px;
+    padding-top: 50px;
   }
 }
